src/K8S/mssql2-posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql2
  template:
    metadata:
      labels:
        app: mssql2
    spec:
      containers:
        - name: mssql2
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb2
      volumes:
      - name: mssqldb2
        persistentVolumeClaim:
          claimName: mssql2-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql2-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql2
  ports:
  - name: mssql2
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql2-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql2
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
