src/K8S/posts-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postsnpservice-srv
spec:
  type: NodePort
  selector:
    app: postsservice
  ports:
    - name: postsservice
      protocol: TCP
      port: 80
      targetPort: 80
