src/K8S/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersservice
  template:
    metadata:
      labels:
        app: usersservice
    spec:
      containers:
        - name: usersservice
          image: mrsadin/usersservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: users-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: usersservice
  ports:
  - name: usersservice
    protocol: TCP
    port: 80
    targetPort: 80
