src/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: postsproject.com
      http:
        paths:
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 80
          - path: /api/users/posts
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/users/1/posts
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/u/users
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
